--- a/style.css
+++ b/style.css
@@ -280,7 +280,10 @@ a, p, span, div, section, ul, li, ol{
         padding-bottom: 25px;
     }
 }
-
+.dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0; 
+}
 /* ====================== Header css ends ========================= */
 
 
